src/construction/components/areas.css
.area-polygon-inner-perimeter path {
  fill: var(--gray-4);
  stroke-width: 50;
  stroke: var(--gray-10);
}

.area-polygon-outer-perimeter path {
  fill: none;
  stroke-width: 50;
  stroke: var(--gray-10);
}

.area-polygon-corner path {
  fill: none;
  stroke: var(--gray-12);
  stroke-width: 20;
  stroke-dasharray: 50, 50;
  opacity: 0.7;
}

.area-polygon text,
.area-cuboid text,
.area-cut text {
  font-size: 100px;
  text-anchor: middle;
  opacity: 0.7;
  color: var(--gray12);
}

.area-cuboid-window rect {
  fill: #87ceeb;
  stroke: #4c879e;
  stroke-width: 10;
  opacity: 0.5;
}

.area-cuboid-door rect {
  fill: #8b4513;
  stroke: #65320e;
  stroke-width: 20;
}

.area-cuboid-passage rect {
  fill: none;
  stroke: var(--gray-8);
  stroke-width: 20;
  stroke-dasharray: 200, 100;
  opacity: 0.7;
}

.area-polygon-bottom-plate path,
.area-polygon-top-plate path {
  fill: var(--gray-8);
  stroke: var(--gray-12);
  stroke-width: 20;
  stroke-dasharray: 50, 50;
  opacity: 0.7;
}

.area-polygon-bottom-plate text,
.area-polygon-top-plate text {
  font-size: 50px;
  dominant-baseline: central;
}

.area-cut-floor-level line {
  stroke: var(--gray-12);
  stroke-width: 10;
  stroke-dasharray: 100, 50;
  opacity: 0.7;
}

.area-cut-floor-level text {
  dominant-baseline: hanging;
  font-weight: bold;
  font-size: 70px;
}

/* Mid cut functionality */
.mid-cut-enabled .construction-element.above-cut,
.mid-cut-enabled .construction-group.above-cut {
  display: none;
}

g.tag__construction_module {
  outline: solid 30px var(--accent-a8);
  outline-offset: -30px;
}

